--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <section id="donate">
                     <h1>网站有什么用呢</h1>
                     <div class="donate-img-box">
-                        <img src="moe-cdn.fly3949.com/assets/img/WeChat.png">
+                        <img src="111">
                         <img src="moe-cdn.fly3949.com/assets/img/AliPay.png">
                     </div>
 <!--                     <p>
