--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                 </section>
                 <section id="donate">
-                    <h1>网站有什么用呢</h1>
+                    <h1>网站有什么用呢，联系我:hank201320221@outlook.com</h1>
                     <div class="donate-img-box">
                         <img src="111">
                         <img src="moe-cdn.fly3949.com/assets/img/AliPay.png">
@@ -109,7 +109,7 @@
 <!--                     <p>
                         Bitcoin: 32VRHdCR1nSsKG5aXi4MZBrvTwH8dvHFm4
                         <br>PayPal:
-                        <a href="https://paypal.me/lwl12" target="_blank">https://paypal.me/lwl12</a>
+                        <a href="没有palpal.cn</a>
                     </p> -->
                 </section>
             </div>
