--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         这是我的个人网站，
                         <br> 但，没什么用。
                         <br> 这个网站有什么用呢。
-                        <br> 这个网站托管在GitHub上。
+                        <br> 这个网站托管在GitHub上，如果你通过https://hank-chrome-github-io.vercel.app/访问，那么是托管在Vercel上
                     </p>
                 </section>
                 <section id="archives">
